--- a/AngelPhoneTrack/appsettings.json
+++ b/AngelPhoneTrack/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MAIN": "Server = db.bit.io; Username = binn; Port = 5432; Database = binn/test; Password = v2_3wpvN_zZ6YEezdCbSmawpMTwGh8TT;"
+  }
 }
