Introduce database schema, first migration, superuser and automatic migrations.

--- a/AngelPhoneTrack/appsettings.json
+++ b/AngelPhoneTrack/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "SuperuserPin": "7664",
   "ConnectionStrings": {
     "MAIN": "Server = db.bit.io; Username = binn; Port = 5432; Database = binn/test; Password = v2_3wpvN_zZ6YEezdCbSmawpMTwGh8TT;"
   }
