--- a/AngelPhoneTrack/Properties/launchSettings.json
+++ b/AngelPhoneTrack/Properties/launchSettings.json
@@ -10,14 +10,6 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7236;http://localhost:5061"
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
@@ -26,13 +18,5 @@
       "useSSL": true
     }
   },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:33124",
-      "sslPort": 44328
-    }
-  }
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
