--- a/AngelPhoneTrack/appsettings.Development.json
+++ b/AngelPhoneTrack/appsettings.Development.json
@@ -5,15 +5,7 @@
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information",
-        "Microsoft.EntityFrameworkCore": "Warning"
-      }
-    },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning",
-        "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command ": "Warning"
+        "Microsoft.EntityFrameworkCore": "Information"
       }
     }
   }
