--- a/AngelPhoneTrack/appsettings.json
+++ b/AngelPhoneTrack/appsettings.json
@@ -4,7 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.AspNetCore.Hosting.Diagnostics": "Warning",
-      "Microsoft.EntityFrameworkCore.Database.Command ": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command ": "Information"
     }
   },
   "AllowedHosts": "*",
