--- a/AngelPhoneTrack/Properties/launchSettings.json
+++ b/AngelPhoneTrack/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AngelPhoneTrack": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
