Update migrations to release ver 1

--- a/AngelPhoneTrack/appsettings.json
+++ b/AngelPhoneTrack/appsettings.json
@@ -10,6 +10,6 @@
   "AllowedHosts": "*",
   "SuperuserPin": "7664",
   "ConnectionStrings": {
-    "MAIN": "Server = db.bit.io; Username = binn; Port = 5432; Database = binn/test; Password = v2_3wpvN_zZ6YEezdCbSmawpMTwGh8TT;"
+    "MAIN": "Server = db.bit.io; Username = APTSTAGING; Port = 5432; Database = angelcellular/apt-staging; Password = v2_3yChC_8JVTbeLkZRFZWPvZmNUK7Lr;"
   }
 }
