--- a/AngelPhoneTrack/appsettings.json
+++ b/AngelPhoneTrack/appsettings.json
@@ -9,6 +9,7 @@
   },
   "AllowedHosts": "*",
   "SuperuserPin": "7664",
+  "TelegramToken": "5987137737:AAHaEIXBdCHqGH8wBfFKMMWGvs5sQfCyjnM",
   "ConnectionStrings": {
     "MAIN": "Server = db.bit.io; Username = APTSTAGING; Port = 5432; Database = angelcellular/apt-staging; Password = v2_3yChC_8JVTbeLkZRFZWPvZmNUK7Lr;"
   }
