--- a/AngelPhoneTrack/appsettings.json
+++ b/AngelPhoneTrack/appsettings.json
@@ -11,6 +11,6 @@
   "SuperuserPin": "7664",
   "TelegramToken": "5987137737:AAHaEIXBdCHqGH8wBfFKMMWGvs5sQfCyjnM",
   "ConnectionStrings": {
-    "MAIN": "Server = db.bit.io; Username = APTSTAGING; Port = 5432; Database = angelcellular/apt-staging; Password = v2_3yChC_8JVTbeLkZRFZWPvZmNUK7Lr;"
+    "MAIN": "Server = 10.10.0.233; Username = angelcellular; Port = 5432; Database = angelphonetrack; Password = AngelCellular22;"
   }
 }
